<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory 
		android:title="@string/preference_category_service"
	>
		<CheckBoxPreference
			android:title="@string/preference_service_enabled_title"
			android:summary="@string/preference_service_enabled_summary"
			android:key="serviceEnabled"
			android:defaultValue="true"
		/>
		<ListPreference
			android:dependency="serviceEnabled"
			android:title="@string/preference_service_start_title"
			android:summary="@string/preference_service_start_summary"
			android:key="serviceStart"
			android:defaultValue="1"
			android:entries="@array/service_start"
			android:entryValues="@array/service_start_values" 
		/>
	</PreferenceCategory>
	<PreferenceCategory 
		android:title="@string/preference_category_notification"
	>
		<CheckBoxPreference
			android:title="@string/preference_notification_sound_enabled_title"
			android:summary="@string/preference_notification_sound_enabled_summary"
			android:key="notificationSoundEnabled"
			android:defaultValue="true"
		/>
		<RingtonePreference
			android:dependency="notificationSoundEnabled"
			android:summary="@string/preference_notification_sound_summary"
			android:title="@string/preference_notification_sound_title"
			android:key="notificationSound" 
			android:ringtoneType="notification|alarm"
			android:showDefault="true"
			android:showSilent="true"
		/>
		<CheckBoxPreference
			android:title="@string/preference_notification_vibrate_enabled_title"
			android:summary="@string/preference_notification_vibrate_enabled_summary"
			android:key="notificationVibrateEnabled"
			android:defaultValue="true"
		/>
		<CheckBoxPreference
			android:title="@string/preference_notification_lights_enabled_title"
			android:summary="@string/preference_notification_lights_enabled_summary"
			android:key="notificationLightsEnabled"
			android:defaultValue="true"
		/>
	</PreferenceCategory>
	<PreferenceCategory 
		android:title="@string/preference_category_debug"
	>
		<CheckBoxPreference
			android:title="@string/preference_debug_enabled_title"
			android:summary="@string/preference_debug_enabled_summary"
			android:key="debugEnabled"
			android:defaultValue="false"
		/>
	</PreferenceCategory>
</PreferenceScreen>